Add search filter to the requests page

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -24,6 +24,16 @@ html.lightstrap, html.darkstrap
 .hard-wrap
     word-wrap break-word
 
+tr.filtered
+    display none
+
+section input[type="search"][required]
+    font-size 1.75em
+    height auto
+    padding .5rem
+    margin-bottom 1rem
+    line-height 1.5em
+
 // Overrides
 
 #nav-user-name
