--- a/app/views/templates/dashboard.hbs
+++ b/app/views/templates/dashboard.hbs
@@ -7,12 +7,17 @@
         <h1>Status Overview</h1>
     </div>
     <div class="row-fluid">
-        <div class="span12">
+        <div class="span4">
             <div class="well">
-                Uptime: <span data-state-property="uptime">{{ state.uptime }}</span> &nbsp;&nbsp;&nbsp;
-                Driver status: <span data-state-property="driverStatus">{{ state.driverStatus }}</span>
+                <h3>Up for <span data-state-property="uptimeHuman">{{ state.uptimeHuman }}</span> &nbsp;&nbsp;&nbsp;</h3>
             </div>
         </div>
+        <div class="span4">
+            <div class="well">
+                <h3><span data-state-property="driverStatus">{{ state.driverStatus }}</span></h3>
+            </div>
+        </div>
+        <div class="span4"></div>
     </div>
 </section>
 
