Getting names, labels, and ids sorted out

--- a/app/views/templates/request.hbs
+++ b/app/views/templates/request.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{ request.label }}</h1>
-    <h2>{{ request.name }}</h2>
+    <h1>{{ request.name }}</h1>
+    <h2>{{ request.id }}</h2>
 </header>
 
 <section>
