--- a/app/views/templates/task.hbs
+++ b/app/views/templates/task.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{ task.label }}</h1>
-    <h2>{{ v.name }}</h2>
+    <h1>{{ task.name }}</h1>
+    <h2>{{ task.id }}</h2>
 </header>
 
 <section>
