--- a/app/views/templates/request.hbs
+++ b/app/views/templates/request.hbs
@@ -19,9 +19,9 @@
                     </thead>
                     <tbody>
                         {{#eachWithFn requestTasks}}
-                            <tr data-request-id="{{ id }}">
+                            <tr data-task-id="{{ id }}">
                                 <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td><span><a data-request-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
+                                <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
