Add timestamp to requests page

--- a/app/views/templates/requests.hbs
+++ b/app/views/templates/requests.hbs
@@ -15,6 +15,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Requested</th>
                         <th>Deploy User</th>
                         <th>Instances</th>
                         <th>Daemon</th>
@@ -25,6 +26,7 @@
                     {{#eachWithFn requests}}
                         <tr data-request-id="{{ id }}">
                             <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                            <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ timestamp }}">{{ timestampHuman }}</span></td>
                             <td><span>{{ deployUser }}</span></td>
                             <td><span>{{ instances }}</span></td>
                             <td><span>{{ daemon }}</span></td>
