Hard break request/task names/ids on individual request/task pages

--- a/app/views/templates/request.hbs
+++ b/app/views/templates/request.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{ request.name }}</h1>
-    <h2>{{ request.id }}</h2>
+    <h1>{{#hardBreak request.name}}{{/hardBreak}}</h1>
+    <h2>{{#hardBreak request.id}}{{/hardBreak}}</h2>
 </header>
 
 <section>
