--- a/app/views/templates/task.hbs
+++ b/app/views/templates/task.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{ task.name }}</h1>
-    <h2>{{ task.id }}</h2>
+    <h1>{{#hardBreak task.name}}{{/hardBreak}}</h1>
+    <h2>{{#hardBreak task.id}}{{/hardBreak}}</h2>
 </header>
 
 <section>
