Add search to tasks (Closes https://github.com/HubSpot/Singularity/issues/7)

--- a/app/views/templates/tasks.hbs
+++ b/app/views/templates/tasks.hbs
@@ -3,7 +3,7 @@
 </header>
 
 <section>
-    <!-- <input type="search" placeholder="Search tasks..." required /> -->
+    <input type="search" placeholder="Search tasks..." required />
     <div class="row-fluid">
         <div class="span12">
             <h2>Active Tasks</h2>
