Link dashboard boxes to respective pages (Closes #4)

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -306,6 +306,11 @@ ul.event-list
                 .resource-links
                     display none
 
+.big-number-link
+
+    &, &:hover
+        text-decoration none
+
 .big-number
     height 55px
     text-align center
