--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -27,28 +27,34 @@
     </div>
     <div class="row-fluid">
         <div class="span4">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number" data-state-property="requests">{{ state.requests }}</div>
-                    <div class="number-label">Active</div>
+            <a class="big-number-link" href="/singularity/requests" data-route="requests">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="requests">{{ state.requests }}</div>
+                        <div class="number-label">Active</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="span4">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number" data-state-property="pendingRequests">{{ state.pendingRequests }}</div>
-                    <div class="number-label">Pending</div>
+            <a class="big-number-link" href="/singularity/requests/pending" data-route="requests/pending">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="pendingRequests">{{ state.pendingRequests }}</div>
+                        <div class="number-label">Pending</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="span4">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number" data-state-property="cleaningRequests">{{ state.cleaningRequests }}</div>
-                    <div class="number-label">Cleaning</div>
+            <a class="big-number-link" href="/singularity/requests/cleaning" data-route="requests/cleaning">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="cleaningRequests">{{ state.cleaningRequests }}</div>
+                        <div class="number-label">Cleaning</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 </section>
@@ -59,20 +65,24 @@
     </div>
     <div class="row-fluid">
         <div class="span4">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number" data-state-property="activeTasks">{{ state.activeTasks }}</div>
-                    <div class="number-label">Active</div>
+            <a class="big-number-link" href="/singularity/tasks" data-route="tasks">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="activeTasks">{{ state.activeTasks }}</div>
+                        <div class="number-label">Active</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="span4">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number" data-state-property="scheduledTasks">{{ state.scheduledTasks }}</div>
-                    <div class="number-label">Scheduled</div>
+            <a class="big-number-link" href="/singularity/tasks/scheduled" data-route="tasks/scheduled">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="scheduledTasks">{{ state.scheduledTasks }}</div>
+                        <div class="number-label">Scheduled</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="span4"></div>
     </div>
