Remove ellipsis classname here as it was added by accident

--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -21,7 +21,7 @@
                     {{#eachWithFn tasks}}
                         <tr data-task-id="{{ id }}">
                             <td><span><a class="simptip-position-top simptip-movable" data-tooltip="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                            <td><span class="ellipsis simptip-position-top simptip-movable" data-tooltip="{{ startedAt }}">{{ startedAtHuman }}</span></td>
+                            <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ startedAt }}">{{ startedAtHuman }}</span></td>
                             <td><span>{{ host }}</span></td>
                             <td><span>{{ resources.cpus }}</span></td>
                             <td><span>{{ resources.memoryMb }}Mb</span></td>
