--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -20,7 +20,7 @@
                     <tbody>
                         {{#eachWithFn requestTasks}}
                             <tr data-task-id="{{ id }}">
-                                <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                <td><span title="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
                             </tr>
                         {{/eachWithFn}}
