--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -23,8 +23,8 @@
                     <tbody>
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}">
-                                <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                <td><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td><span>{{ deployUser }}</span></td>
                                 <td><span>{{ instances }}</span></td>
                                 <td><span>{{ daemon }}</span></td>
