--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -17,8 +17,8 @@
                 <tbody>
                     {{#eachWithFn tasks}}
                         <tr data-task-id="{{ id }}">
-                            <td><span class="simptip-position-top simptip-movable" data-tooltip="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
-                            <td><span class="ellipsis simptip-position-top simptip-movable" data-tooltip="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
+                            <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
+                            <td><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
                             <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span><td>
                         </tr>
                     {{/eachWithFn}}
