--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -24,7 +24,7 @@
                             <td><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
                             <td><span>{{ host }}</span></td>
                             <td><span>{{ resources.cpus }}</span></td>
-                            <td><span>{{ resources.memoryMb }}Mb</span></td>
+                            <td data-value="{{ resources.memoryMb }}"><span>{{ memoryHuman }}</span></td>
                             <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span><td>
                         </tr>
                     {{/eachWithFn}}
