isActive and lastStatusHuman for task history of a request

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -24,7 +24,7 @@
                         {{#eachWithFn requestTasks}}
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td><span>{{ lastStatus }}</span></td>
+                                <td><span>{{ lastStatusHuman }}</span></td>
                                 <td data-value="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
                                 <td data-value="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
                                 <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
