--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -4,20 +4,29 @@
 
 <section>
     <div class="page-header">
-        <h1>Status Overview</h1>
+        <h1>Overview</h1>
     </div>
     <div class="row-fluid">
-        <div class="span4">
+        <div class="span3">
             <div class="well">
-                <h3>Up for <span data-state-property="uptimeHuman">{{ state.uptimeHuman }}</span> &nbsp;&nbsp;&nbsp;</h3>
+                <span data-state-property="driverStatusHuman">Driver {{ state.driverStatusHuman }}</span>
             </div>
         </div>
-        <div class="span4">
+        <div class="span3">
             <div class="well">
-                <h3><span data-state-property="driverStatus">{{ state.driverStatus }}</span></h3>
+                Up for <span data-state-property="uptimeHuman">{{ state.uptimeHuman }}</span>
             </div>
         </div>
-        <div class="span4"></div>
+        <div class="span3">
+            <div class="well">
+                <span data-state-property="millisSinceLastOfferHuman">Time since last offer:<br/>{{ state.millisSinceLastOfferHuman }}</span>
+            </div>
+        </div>
+        <div class="span3">
+            <div class="well">
+                <span data-state-property="numWebhooks">{{ state.numWebhooks }} Webhooks</span>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -84,6 +93,91 @@
                 </div>
             </a>
         </div>
-        <div class="span4"></div>
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/tasks/cleaning" data-route="tasks/cleaning">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="cleaningTasks">{{ state.cleaningTasks }}</div>
+                        <div class="number-label">Cleaning</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="page-header">
+        <h1>Racks</h1>
+    </div>
+    <div class="row-fluid">
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/racks" data-route="racks">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="activeRacks">{{ state.activeRacks }}</div>
+                        <div class="number-label">Active</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/racks/dead" data-route="racks/dead">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="deadRacks">{{ state.deadRacks }}</div>
+                        <div class="number-label">Dead</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/racks/decomissioning" data-route="racks/decomissioning">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="decomissioningRacks">{{ state.decomissioningRacks }}</div>
+                        <div class="number-label">Decomissioning</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="page-header">
+        <h1>Slaves</h1>
+    </div>
+    <div class="row-fluid">
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="activeSlaves">{{ state.activeSlaves }}</div>
+                        <div class="number-label">Active</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/slaves/dead" data-route="slaves/dead">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="deadSlaves">{{ state.deadSlaves }}</div>
+                        <div class="number-label">Dead</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a class="big-number-link" href="/singularity/slaves/decomissioning" data-route="slaves/decomissioning">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-property="decomissioningSlaves">{{ state.decomissioningSlaves }}</div>
+                        <div class="number-label">Decomissioning</div>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
 </section>
