Copy improvements for empty tables

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -34,7 +34,7 @@
                     </tbody>
                 </table>
             {{else}}
-                There aren't any active requests.
+                <center><p>No active requests.</p></center>
             {{/if}}
         </div>
     </div>
