--- a/SingularityUI/app/views/templates/requestsCleaning.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaning.hbs
@@ -26,7 +26,7 @@
                     </tbody>
                 </table>
             {{else}}
-                There aren't any requests being cleaned up.
+                <center><p>No cleaning requests.</p></center>
             {{/if}}
         </div>
     </div>
