--- a/SingularityUI/app/views/templates/requestsPending.hbs
+++ b/SingularityUI/app/views/templates/requestsPending.hbs
@@ -26,7 +26,7 @@
                     </tbody>
                 </table>
             {{else}}
-                There aren't any pending requests.
+                <center><p>No pending requests.</p></center>
             {{/if}}
         </div>
     </div>
