--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -5,9 +5,9 @@
 
 <section>
     <div class="page-header">
-        <h1>Tasks</h1>
+        <h1>Active Tasks</h1>
     </div>
-    {{#if requestTasks}}
+    {{#if requestTasksActive}}
         <div class="row-fluid">
             <div class="span12">
                 <table class="table">
@@ -21,7 +21,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {{#eachWithFn requestTasks}}
+                        {{#eachWithFn requestTasksActive}}
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td><span>{{ lastStatusHuman }}</span></td>
@@ -35,8 +35,83 @@
             </div>
         </div>
     {{else}}
-        <div class="page-loader centered"></div>
+        {{#if fetchDone}}
+            <center><p>No active tasks.</p></center>
+        {{else}}
+            <div class="page-loader centered"></div>
+        {{/if}}
     {{/if}}
+
+    <div class="page-header">
+        <h1>Scheduled Tasks</h1>
+    </div>
+    {{#if requestTasksScheduled}}
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Scheduled</th>
+                            <th>JSON</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#eachWithFn requestTasksScheduled}}
+                            <tr data-task-id="{{ id }}">
+                                <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
+                                <td><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
+                                <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span><td>
+                            </tr>
+                        {{/eachWithFn}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {{else}}
+        {{#if fetchDone}}
+            <center><p>No scheduled tasks.</p></center>
+        {{else}}
+            <div class="page-loader centered"></div>
+        {{/if}}
+    {{/if}}
+
+    <div class="page-header">
+        <h1>Historical Tasks</h1>
+    </div>
+    {{#if requestTasksHistorical}}
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Status</th>
+                            <th>Created</th>
+                            <th>Updated</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#eachWithFn requestTasksHistorical}}
+                            <tr data-task-id="{{ id }}">
+                                <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
+                                <td><span>{{ lastStatusHuman }}</span></td>
+                                <td data-value="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
+                                <td data-value="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
+                            </tr>
+                        {{/eachWithFn}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {{else}}
+        {{#if fetchDone}}
+            <center><p>No histocial tasks.</p></center>
+        {{else}}
+            <div class="page-loader centered"></div>
+        {{/if}}
+    {{/if}}
+
     <div class="page-header">
         <h1>JSON</h1>
     </div>
