Slaves and racks

--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -136,7 +136,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="/singularity/racks/dead" data-route="racks/dead">
+            <a class="big-number-link" href="/singularity/racks" data-route="racks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number">{{ state.deadRacks }}</div>
@@ -146,7 +146,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="/singularity/racks/decomissioning" data-route="racks/decomissioning">
+            <a class="big-number-link" href="/singularity/racks" data-route="racks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number">{{ state.decomissioningRacks }}</div>
@@ -174,7 +174,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="/singularity/slaves/dead" data-route="slaves/dead">
+            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
                 <div class="well">
                     <div class="big-number">
                         <div class="number">{{ state.deadSlaves }}</div>
@@ -184,7 +184,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="/singularity/slaves/decomissioning" data-route="slaves/decomissioning">
+            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
                 <div class="well">
                     <div class="big-number">
                         <div class="number">{{ state.decomissioningSlaves }}</div>
