Header typography changes

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
     <h1>{{#hardBreak request.name}}{{/hardBreak}}</h1>
-    <h2>{{#hardBreak request.id}}{{/hardBreak}}</h2>
+    <p class="lead">{{#hardBreak request.id}}{{/hardBreak}}</p>
 </header>
 
 <section>
