--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
     <h1>{{#hardBreak task.name}}{{/hardBreak}}</h1>
-    <h2>{{#hardBreak task.id}}{{/hardBreak}}</h2>
+    <p class="lead">{{#hardBreak task.id}}{{/hardBreak}}</p>
 </header>
 
 <section>
