--- a/SingularityUI/app/views/templates/requestsPending.hbs
+++ b/SingularityUI/app/views/templates/requestsPending.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if requests.length}}
-                <table class="table">
+                <table class="table sortTable">
                     <thead>
                         <tr>
                             <th>ID</th>
