Make task tables sortable

--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -10,7 +10,7 @@
     {{#if taskUpdates}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <table class="table sortTable">
                     <thead>
                         <tr>
                             <th>Status</th>
