Make request tables sortable

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -10,7 +10,7 @@
     {{#if requestTasksActive}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <table class="table sortTable">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -25,8 +25,8 @@
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}"><a href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td><span>{{ lastStatusHuman }}</span></td>
-                                <td data-value="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
-                                <td data-value="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
+                                <td sorttable_customkey="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
+                                <td sorttable_customkey="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
                                 <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
                             </tr>
                         {{/eachWithFn}}
@@ -48,7 +48,7 @@
     {{#if requestTasksScheduled}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <table class="table sortTable">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -61,7 +61,7 @@
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
                                 <td><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                                <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span><td>
+                                <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
@@ -77,12 +77,12 @@
     {{/if}}
 
     <div class="page-header">
-        <h1>Historical Tasks</h1>
+        <h1>Historical Tasks <small>Last 100</small></h1>
     </div>
     {{#if requestTasksHistorical}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <table class="table sortTable">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -96,8 +96,8 @@
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
                                 <td><span>{{ lastStatusHuman }}</span></td>
-                                <td data-value="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
-                                <td data-value="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
+                                <td sorttable_customkey="{{ createdAt }}"><span>{{ createdAtHuman }}</span></td>
+                                <td sorttable_customkey="{{ updatedAt }}"><span>{{ updatedAtHuman }}</span></td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
