--- a/SingularityUI/app/styles/sortTable.styl
+++ b/SingularityUI/app/styles/sortTable.styl
@@ -1,6 +1,7 @@
 .sortTable
 
     th
+        -webkit-user-select none
         cursor pointer
 
     th.sorttable_sorted, th.sorttable_sorted_reverse
