--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -12,6 +12,7 @@
                         <th>Name</th>
                         <th>Started</th>
                         <th>Host</th>
+                        <th>Rack</th>
                         <th>CPUs</th>
                         <th>Memory</th>
                         <th>JSON</th>
@@ -23,6 +24,7 @@
                             <td><span><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                             <td><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
                             <td><span>{{ host }}</span></td>
+                            <td><span>{{ rack }}</span></td>
                             <td><span>{{ resources.cpus }}</span></td>
                             <td sorttable_customkey="{{ resources.memoryMb }}"><span>{{ memoryHuman }}</span></td>
                             <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
