Change "Scheduled" label to "Next run"

--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -10,7 +10,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Scheduled</th>
+                        <th>Next run</th>
                         <th>JSON</th>
                     </tr>
                 </thead>
