--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -52,7 +52,7 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Scheduled</th>
+                            <th>Next run</th>
                             <th>JSON</th>
                         </tr>
                     </thead>
