Better 404 page (Closes #13)

--- a/SingularityUI/app/views/templates/404.hbs
+++ b/SingularityUI/app/views/templates/404.hbs
@@ -1,1 +1,7 @@
-<h1>Page not found</h1>
+<header class="jumbotron subhead" id="overview">
+    <h1>404</h1>
+    <p class="lead">Page not found</p>
+</header>
+
+<p>Sorry, we could not find the page you were looking for.</p>
+<pre>{{ fragment }}</pre>
